--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "bower install;gulp build"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,37 @@
   },
   "homepage": "https://github.com/K4orta/reaper-of-stats",
   "devDependencies": {
+    "babel": "^4.5.4",
+    "babelify": "^5.0.3",
     "browserify": "^9.0.3",
-    "gulp": "^3.8.11"
+    "chai": "^2.1.0",
+    "flummox": "^2.11.0",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-babel": "^4.0.0",
+    "gulp-less": "^3.0.1",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load": "^0.1.1",
+    "gulp-minify-css": "^0.5.1",
+    "gulp-nodemon": "^1.0.5",
+    "gulp-pixrem": "^0.1.3",
+    "gulp-react": "^2.1.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "jsdom": "^4.0.1",
+    "livereload": "^0.3.6",
+    "mocha": "^2.1.0",
+    "reactify": "^1.0.0",
+    "stream-combiner2": "^1.0.2",
+    "superagent": "^0.21.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
+  },
+  "dependencies": {
+    "compression": "^1.4.1",
+    "express": "^4.12.0",
+    "jade": "^1.9.2",
+    "react": "^0.12.2",
+    "react-router": "^0.12.4"
   }
 }
