--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha lib/**/*-test.js",
     "postinstall": "bower install;gulp build"
   },
   "repository": {
@@ -46,9 +46,14 @@
   },
   "dependencies": {
     "compression": "^1.4.1",
+    "d3": "^3.5.5",
     "express": "^4.12.1",
+    "flummox": "^2.12.5",
     "jade": "^1.9.2",
+    "lodash": "^3.3.1",
+    "moment": "^2.9.0",
     "react": "^0.12.2",
-    "react-router": "^0.12.4"
+    "react-router": "^0.12.4",
+    "superagent": "^0.21.0"
   }
 }
