--- a/package.json
+++ b/package.json
@@ -42,17 +42,21 @@
     "stream-combiner2": "^1.0.2",
     "superagent": "^0.21.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.4.0"
   },
   "dependencies": {
     "compression": "^1.4.1",
     "d3": "^3.5.5",
     "express": "^4.12.1",
     "flummox": "^2.12.5",
+    "hammerjs": "^2.0.4",
     "jade": "^1.9.2",
+    "jquery": "^2.1.3",
     "lodash": "^3.3.1",
     "moment": "^2.9.0",
     "react": "^0.12.2",
+    "react-d3": "^0.3.0",
     "react-router": "^0.12.4",
     "superagent": "^0.21.0"
   }
