--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/K4orta/reaper-of-stats",
   "devDependencies": {
-    "babel": "^4.6.4",
-    "babelify": "^5.0.3",
-    "browserify": "^9.0.3",
+    "babel": "^5.0.8",
+    "babel-core": "^5.0.10",
+    "babelify": "^6.0.1",
+    "browserify": "^9.0.7",
     "chai": "^2.1.0",
-    "flummox": "^2.12.3",
+    "flummox": "^3.5.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-babel": "^4.0.0",
@@ -46,18 +47,20 @@
     "watchify": "^2.4.0"
   },
   "dependencies": {
-    "compression": "^1.4.1",
+    "compression": "^1.4.3",
     "d3": "^3.5.5",
-    "express": "^4.12.1",
-    "flummox": "^2.12.5",
+    "es6-promise": "^2.0.1",
+    "express": "^4.12.3",
+    "flummox": "^3.5.0",
     "hammerjs": "^2.0.4",
+    "isomorphic-fetch": "^2.0.1",
     "jade": "^1.9.2",
     "jquery": "^2.1.3",
-    "lodash": "^3.3.1",
+    "lodash": "^3.6.0",
     "moment": "^2.9.0",
-    "react": "^0.12.2",
+    "react": "^0.13.1",
     "react-d3": "^0.3.0",
-    "react-router": "^0.12.4",
+    "react-router": "^0.13.2",
     "superagent": "^0.21.0"
   }
 }
